--- a/TreatmentUtilization.ipynb
+++ b/TreatmentUtilization.ipynb
@@ -114,13 +114,7 @@
     "analysisSpecifications <- Strategus::createEmptyAnalysisSpecificiations() |>\n",
     "  Strategus::addSharedResources(cohortDefinitionShared) |>\n",
     "  Strategus::addModuleSpecifications(cohortGeneratorModuleSpecifications) |>\n",
-    "  Strategus::addModuleSpecifications(treatmentPatternsSpecifications)\n",
-    "\n",
-    "# Save JSON\n",
-    "#ParallelLogger::saveSettingsToJson(\n",
-    "#  analysisSpecifications,\n",
-    "#  file.path(\"inst\", \"Eunomia\", \"SampleStudy\", \"treatmentPatternsAnalysisSpecification.json\")\n",
-    "#)"
+    "  Strategus::addModuleSpecifications(treatmentPatternsSpecifications)"
    ]
   },
   {
