Updated markdown - HTML was not working

--- a/SurvivalAnalysis.ipynb
+++ b/SurvivalAnalysis.ipynb
@@ -5,19 +5,14 @@
    "metadata": {},
    "source": [
     "\n",
-    "<h2> Survival Analysis (Kaplan Meier) Network Study Using Strategus</h2>"
+    "## Survival Analysis (Kaplan Meier) Network Study Using Strategus "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "<h4> Step 1 - Import the necessary libraries </h4>\n"
+    "#### Step 1 - Import the necessary libraries\n"
    ]
   },
   {
@@ -37,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Step 2 - Cohort definition loading </h4>"
+    "#### Step 2 - Cohort definition loading"
    ]
   },
   {
@@ -55,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Step 3 - Define the network study components </h4>"
+    "#### Step 3 - Define the network study components"
    ]
   },
   {
@@ -107,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p> Create settings for modules involved in the study </p>"
+    "Create settings for modules involved in the study"
    ]
   },
   {
@@ -154,17 +149,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p> Create the analysis specification object - including all the modules and configurations created above </p>"
+    "Create the analysis specification object - including all the modules and configurations created above"
    ]
   },
   {
@@ -185,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Step 4 - Execute the Strategus study </h4>"
+    "#### Step 4 - Execute the Strategus study"
    ]
   },
   {
