--- a/TreatmentSafety.ipynb
+++ b/TreatmentSafety.ipynb
@@ -5,14 +5,14 @@
    "metadata": {},
    "source": [
     "\n",
-    "<h2> Treatment Safety Network Study Using Strategus - PLP Study</h2>"
+    "## Treatment Safety Network Study Using Strategus - PLP Study"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Step 1 - Import the necessary libraries </h4>\n"
+    "#### Step 1 - Import the necessary libraries\n"
    ]
   },
   {
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Step 2 - Cohort definition loading </h4>"
+    "#### Step 2 - Cohort definition loading"
    ]
   },
   {
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Step 3 - Define the network study components </h4>"
+    "#### Step 3 - Define the network study components"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p> Create settings for modules involved in the study </p>"
+    "Create settings for modules involved in the study"
    ]
   },
   {
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p> Create the analysis specification object - including all the modules and configurations created above </p>"
+    "Create the analysis specification object - including all the modules and configurations created above"
    ]
   },
   {
@@ -192,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Step 4 - Execute the Strategus study </h4>"
+    "#### Step 4 - Execute the Strategus study"
    ]
   },
   {
