Updated markdown - HTML wasn't working

--- a/TreatmentUtilization.ipynb
+++ b/TreatmentUtilization.ipynb
@@ -5,14 +5,14 @@
    "metadata": {},
    "source": [
     "\n",
-    "<h2> Treatment Pathways Network Study Using Strategus </h2>"
+    "## Treatment Pathways Network Study Using Strategus"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Step 1 - Import the necessary libraries </h4>\n"
+    "## Step 1 - Import the necessary libraries\n"
    ]
   },
   {
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Step 2 - Cohort definition loading </h4>"
+    "#### Step 2 - Cohort definition loading"
    ]
   },
   {
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Step 3 - Define the network study components </h4>"
+    "#### Step 3 - Define the network study components"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Step 4 - Execute the Strategus study </h4>"
+    "#### Step 4 - Execute the Strategus study"
    ]
   },
   {
