updated notebook - added some temporary code as well

--- a/TreatmentSafety.ipynb
+++ b/TreatmentSafety.ipynb
@@ -42,8 +42,10 @@
    "outputs": [],
    "source": [
     "%%jupyter\n",
-    "cohorts_set <- c(13)\n",
-    "cohortDefinitionSet <- rD2E::get_cohort_definition_set(cohort_set)"
+    "tarCohortId <- 12\n",
+    "outCohortId <- 11\n",
+    "cohorts_set <- c(tarCohortId, outCohortId)\n",
+    "cohortDefinitionSet <- rD2E::get_cohort_definition_set(cohorts_set)\n"
    ]
   },
   {
@@ -60,6 +62,12 @@
    "outputs": [],
    "source": [
     "%%jupyter\n",
+    "# If you are not restricting your study to a specific time window,\n",
+    "# please make these strings empty\n",
+    "studyStartDate <- '19001201' # YYYYMMDD\n",
+    "studyEndDate <- '20231231'   # YYYYMMDD\n",
+    "\n",
+    "\n",
     "# PLP time-at-risks should try to use fixed-time TARs\n",
     "plpTimeAtRisks <- tibble(\n",
     "  riskWindowStart  = c(1),\n",
@@ -68,9 +76,9 @@
     "  endAnchor = c(\"cohort start\")\n",
     ")\n",
     "\n",
-    "# Outcomes: The outcome for this study is cohort_id == 3 \n",
+    "# Outcomes: The outcome for this study is cohort_id == outcomeCohortId\n",
     "oList <- cohortDefinitionSet %>%\n",
-    "  filter(.data$cohortId == 3) %>%\n",
+    "  filter(.data$cohortId == outCohortId) %>%\n",
     "  mutate(outcomeCohortId = cohortId, outcomeCohortName = cohortName) %>%\n",
     "  select(outcomeCohortId, outcomeCohortName) %>%\n",
     "  mutate(cleanWindow = 365)"
@@ -202,8 +210,29 @@
    "outputs": [],
    "source": [
     "%%jupyter\n",
+    "# temporary workaround for running strategus on d2e server\n",
+    "executionSettings <- Strategus::createCdmExecutionSettings(\n",
+    "    workDatabaseSchema = \"cdm_5pct_9a0f90a32250497d9483c981ef1e1e70\",\n",
+    "    cdmDatabaseSchema = \"cdm_5pct_9a0f90a32250497d9483c981ef1e1e70\",\n",
+    "    cohortTableNames = CohortGenerator::getCohortTableNames(cohortTable = \"cohort\"),\n",
+    "    workFolder = \"/tmp/<notebook_name>/work\",\n",
+    "    resultsFolder = \"/tmp/<notebook_name>/results\",\n",
+    "    logFileName = \"/tmp/<notebook_name>/strategus-log.txt\",\n",
+    "    minCellCount = 5,\n",
+    "    maxCores = 8,\n",
+    "  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%jupyter\n",
     "study_name <- \"treatment_safety_study\"  # Unique study name\n",
     "options <- create_options(upload_results=TRUE, study_id = study_name) # set a study_id with a unique id\n",
+    "options$studyId <- study_name\n",
     "rD2E::run_strategus_flow(analysisSpecification = analysisSpecifications, options = options)"
    ]
   }
